--- a/src/app/restaurante/listarestaurante/listarestaurante.component.html
+++ b/src/app/restaurante/listarestaurante/listarestaurante.component.html
@@ -1,29 +1,24 @@
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Id</th>
+        <th scope="col">NomPlato</th>
+        <th scope="col">PrecioPlato</th>
+        <th scope="col">foto</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td>Huevo frito</td>
+        <td>18</td>
+        <td>foto</td>
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+        <td>Lomo Saltado</td>
+        <td>25</td>
+        <td>foto</td>
       </tr>
     </tbody>
   </table>
