--- a/src/app/testimonio/listatestimonio/listatestimonio.component.html
+++ b/src/app/testimonio/listatestimonio/listatestimonio.component.html
@@ -1,29 +1,21 @@
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Id</th>
+        <th scope="col">Contenido</th>
+        <th scope="col">Estado</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td>Buena atencion</td>
+        <td>0</td>
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+        <td>Mala atencion</td>
+        <td>1</td>
       </tr>
     </tbody>
   </table>
