--- a/src/app/reserva/listareserva/listareserva.component.html
+++ b/src/app/reserva/listareserva/listareserva.component.html
@@ -20,3 +20,5 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <a href="reserva/nuevo" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Nueva Reserva</a>
