--- a/src/app/testimonio/listatestimonio/listatestimonio.component.html
+++ b/src/app/testimonio/listatestimonio/listatestimonio.component.html
@@ -14,3 +14,5 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <a href="testimonio/nuevo" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Nuevo Testimonio</a>
