--- a/src/app/administrador/listaadministrador/listaadministrador.component.html
+++ b/src/app/administrador/listaadministrador/listaadministrador.component.html
@@ -20,3 +20,5 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <a href="administrador/nuevo" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Nuevo Administrador</a>
