--- a/src/app/cliente/listacliente/listacliente.component.html
+++ b/src/app/cliente/listacliente/listacliente.component.html
@@ -24,3 +24,5 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <a href="cliente/nuevo" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Nuevo Cliente</a>
