--- a/src/app/restaurante/listarestaurante/listarestaurante.component.html
+++ b/src/app/restaurante/listarestaurante/listarestaurante.component.html
@@ -16,3 +16,5 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <a href="restaurante/nuevo" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Nuevo Restaurante</a>
