--- a/src/app/administrador/nuevoadministrador/nuevoadministrador.component.html
+++ b/src/app/administrador/nuevoadministrador/nuevoadministrador.component.html
@@ -17,7 +17,7 @@
   </div>
 <div class="mb-3">
     <label for="EstadoInput" class="form-label">Estado</label>
-    <input type="text" class="form-control" id="EstadoInput" #inputEstado>
+    <input type="number" class="form-control" id="EstadoInput" #inputEstado>
   </div>
   <hr>
   <a href="administrador" class="btn btn-warning btn-lg" tabindex="-1" role="button" (click)="crearAdmi(inputNombre.value, inputUsuario.value, inputContrasena.value, inputTarea.value, inputEstado.valueAsNumber)" >Aceptar</a>
