--- a/src/app/testimonio/nuevotestimonio/nuevotestimonio.component.html
+++ b/src/app/testimonio/nuevotestimonio/nuevotestimonio.component.html
@@ -1,11 +1,11 @@
 <h3>Nuevo Testimonio</h3>
 <div class="mb-3">
     <label for="ContenidoInput" class="form-label">Contenido</label>
-    <input type="text" class="form-control" id="ContenidoInput" [value]="nuevoTestimonio.contenido">
+    <input type="text" class="form-control" id="ContenidoInput" #inputContenido>
   </div>
 <div class="mb-3">
     <label for="EstadoInput" class="form-label">Estado</label>
-    <input type="text" class="form-control" id="EstadoInput" [value]="nuevoTestimonio.estado">
+    <input type="number" class="form-control" id="EstadoInput" #inputEstado>
   </div>
   <hr>
-  <a href="testimonio" class="btn btn-warning btn-lg" tabindex="-1" role="button" >Aceptar</a>
+  <a href="testimonio" class="btn btn-warning btn-lg" tabindex="-1" role="button" (click)="crearTestimonio(inputContenido.value, inputEstado.valueAsNumber)">Aceptar</a>
